--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,14 @@
-# Editor configuration, see http://editorconfig.org
-
+# http://editorconfig.org
 root = true
 
-[*] # 表示所有文件都适用
-charset = utf-8 # 设置文件字符集
-indent_style = tab # 缩进风格 tab | space
-indent_size = 2 # 缩进大小
-end_of_line = lf # 控制换行类型 lf | cr | crlf
-trim_trailing_whitespace = true # 去除行首的任意空白字符
-insert_final_newline = true # 是否始终在文件末尾插入一个新行
+[*]
+charset = utf-8
+indent_style = space
+indent_size = 2
+end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.md]
+insert_final_newline = false
+trim_trailing_whitespace = false
