--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview",
     "lint:eslint": "eslint --fix --ext .js,.ts,.vue,.tsx ./src",
     "preinstall": "npx only-allow pnpm",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "commit": "git cz",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "dependencies": {
     "axios": "^0.27.2",
